--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -10,7 +10,8 @@
     <ul>
         {% for entry in entries %}
             <li>
-                <a href="{% url 'wiki' entry %}">{{ entry }}</a></li>
+                <a href="{% url 'wiki' entry %}">{{ entry }}</a>
+            </li>
         {% endfor %}
     </ul>
 
