--- a/encyclopedia/templates/encyclopedia/newpage.html
+++ b/encyclopedia/templates/encyclopedia/newpage.html
@@ -12,11 +12,11 @@
     {% csrf_token %}
     <div>
         <label>Title:</label>
-        <input class="form-control" type="text" name="title" placeholder="Title">
+        <input class="form-control" type="text" name="title">
     </div>
     <div>
-        <label>Details:</label>
-        <textarea name="details" rows="15" class="form-control"></textarea>
+        <label>Description:</label>
+        <textarea name="details" rows="13" class="form-control"></textarea>
     </div>
     <div>
         <br>
